# soarm-studio

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: pages.yml
configs/sessions/: dual_soarm.example.yaml  mock.yaml  soarm.example.yaml
docs/: architecture.html  calibration-principles.html  calibration.html  cli-reference.html  configuration.html  generated-files.html  hardware-setup.html  images-and-video.html  index.html  installation.html  publishing.html  quickstart.html  recording.html  teleoperation.html  troubleshooting.html
docs/assets/: docs.css  docs.js
docs/en/: architecture.html  calibration-principles.html  calibration.html  cli-reference.html  configuration.html  generated-files.html  hardware-setup.html  images-and-video.html  index.html  installation.html  lerobot-dataset-v3.html  quickstart.html  recording.html  teleoperation.html  troubleshooting.html
docs/zh-CN/: architecture.html  calibration-principles.html  calibration.html  cli-reference.html  configuration.html  generated-files.html  hardware-setup.html  images-and-video.html  index.html  installation.html  lerobot-dataset-v3.html  publishing.html  quickstart.html  recording.html  teleoperation.html  troubleshooting.html
src/soarm_studio/: assignment.py  cli.py  config.py  types.py  web.py
tests/: test_assignment.py  test_calibration.py  test_cameras.py  test_cli_outputs.py  test_config.py  test_lerobot_v3_writer.py  test_ports.py  test_recording.py  test_runtime.py  test_teleop.py
web/: index.html  package.json
web/src/: App.jsx  styles.css
(+25 files in other folders)
