[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soarm-studio"
version = "0.1.0"
description = "Thin SOARM teleoperation, recording, dataset, and deployment pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SOARM Contributors" }]
dependencies = []

[project.optional-dependencies]
config = ["PyYAML>=6.0"]
dataset = ["pyarrow>=15.0.0", "opencv-python>=4.8.0", "numpy>=1.26"]
ports = ["pyserial>=3.5"]
hardware = ["pyserial>=3.5", "soarm @ git+ssh://git@github.com/Oooer8/soarm-sdk.git@main"]
lerobot-compat = ["lerobot[dataset]>=0.5,<0.6"]
rerun = ["rerun-sdk>=0.16"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
soarm-studio = "soarm_studio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
soarm_studio = ["webapp/*", "webapp/assets/brand/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
